--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,13 @@ body {
 /* //home background  */
 .bgmain{
   background-image: url('/src/assets/mainbg1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.bgmain1{
+  background-image: url('/src/assets/bgopacity.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
